# stm32g0templ_cmake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  STM32G0_toolchain.cmake
include/: stm32g0xx_hal_conf.h
src/: main.cpp
